[package]
name = "keycloak-access"
version = "0.0.1"
edition = "2021"
publish = false
authors = ["Jürgen Seitz <juergen.seitz@h-d-gmbh.de>"]
rust-version = "1.70"

[dependencies]
dotenv = "0.15.0"
thiserror = "1.0.40"
base64 = "0.21.0"
envy = "0.4.2"
keycloak = "21.0.101"
jsonwebtoken = "9.0.0"
reqwest = "0.11.16"
serde = { version = "1.0.189", features = ["derive", "rc"] }
serde_json = "1.0.107"
futures-locks = "0.7.1"
log = "0.4"
